--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,8 @@
 
 .revealjs-drawer-menu {
   position: absolute;
-  left: 100px;
+  left: 50%;
+  transform: translateX(-50%);
   bottom: 20px;
   height: 50px;
   z-index: 2;
@@ -36,6 +37,7 @@
 .revealjs-drawer-color_container {
   display: flex;
   flex-direction: row;
+  margin-top: -6px;
 }
 
 .revealjs-drawer-color_picker {
